# FluidDynamicsCore

./: CMakeLists.txt  FluidConstants.h  FluidExport.h  FluidSystem.cpp  FluidSystem.h  GuiApp.cpp  GuiApp.h  NumericalSolverFD.cpp  NumericalSolverFD.h  README.md  fluid_c_api.cpp  framework.h  main.cpp  pch.h
docs/: API.md  BUILDING.md  SIMULATIONS.md
